Fix axis knob z-index

--- a/src/components/RotaryKnob.scss
+++ b/src/components/RotaryKnob.scss
@@ -64,7 +64,7 @@
       }
     }
     &.knob-active {
-      z-index: 2000;
+      z-index: 2002;
       .axis-knob-helper {
         opacity: 1;
       }
